# homeworks_Otus

./: .gitignore  README.md
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile
homework_03/ping_pong/: main.py  pyproject.toml
homework_03/ping_pong/ping_pong/: app.py
homework_03/ping_pong/tests/: test_ping_pong.py
practice/: OOP_practice.py  decorator.py  poligon.py
