[tool.poetry]
name = "ping_pong"
version = "0.1.0"
description = ""
authors = ["obver170 <obver170@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.1"
uvicorn = "^0.14.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
